tests/NormalTests/paczka1/small_fuzzy/83058447.err
Error in line 8: O83qLG8zb A332 34,9
Error in line 9: hXw A358 14,9
Error in line 14: O83qLG8zb S42 0,11
Error in line 11: A358 S701 45,1
